--- a/vercel.json
+++ b/vercel.json
@@ -6,10 +6,16 @@
             "use": "@vercel/node"
         }
     ],
-    "rewrites": [
+    "routes": [
         {
-            "source": "/(.*)",
-            "destination": "/"
+            "src": "/(.*)",
+            "dest": "/server.js",
+            "methods": [
+                "GET",
+                "DELETE",
+                "POST",
+                "PUT"
+            ]
         }
     ]
 }
